--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,8 +23,15 @@ jobs:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-        echo "Iniciando Login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "Finalizando Login"
+        
+    - name: Build Docker image
+      run: |
+        docker build -t matthiasjofre/docker-graphql:0.0.1 .
+        
+    - name: Push Docker image
+      run: |
+        docker push matthiasjofre/docker-graphql:0.0.1 .
+        
 #     - name: Build the Docker image
 #       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
